kind/nginx/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx
spec:
  containers:
    - name: test-container
      image: nginx:latest
      ports:
      - containerPort: 80
